Dark Theme (no GUI toggle yet, call the JS func directly for now)

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,11 @@ body {
     height: 100%;
     font-size: 15px;
     overflow: hidden;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .allcontainer {
