--- a/modules/native_eZ80/css/style.css
+++ b/modules/native_eZ80/css/style.css
@@ -38,6 +38,9 @@ div.CodeMirror {
     border-radius: 0 0 5px 5px;
     height: 80%;
 }
+div.CodeMirror pre {
+    font-family: Menlo,Roboto,Consolas,monospace !important;
+}
 
 .inline-lint-msg {
     display: inline-block;
