--- a/modules/native_eZ80/css/style.css
+++ b/modules/native_eZ80/css/style.css
@@ -222,7 +222,7 @@ button > span.loadingicon {
 
 #firechat-wrapper {
     position: absolute;
-    bottom: 0;
+    bottom: 25px;
     right: 0;
     margin: 10px;
     width: 225px;
