--- a/css/dark.css
+++ b/css/dark.css
@@ -22,7 +22,7 @@ body {
     background-color: #999;
 }
 
-#projectList li.active {
+#currentProject {
     background-color: #2E2E2E;
-    box-shadow: -3px 1px 6px 3px #2E2E2E;
+    box-shadow: -3px 2px 6px 3px #2E2E2E;
 }
