[CE C] Files list/tabs now group counterpart impl/header files

--- a/modules/native_eZ80/css/style.css
+++ b/modules/native_eZ80/css/style.css
@@ -204,6 +204,14 @@ span#buildTimestamp.buildError:before {
     color: red;
 }
 
+div.filelist li {
+    margin-right: 1px;
+}
+
+div.filelist li.counterpart {
+    margin-right: -3px;
+}
+
 div.filelist li.active.pull-right > * {
     cursor: pointer !important;
     z-index: 99;
