[CE C] File list/tabs change (warning/error icons ; misc.)

--- a/modules/native_eZ80/css/style.css
+++ b/modules/native_eZ80/css/style.css
@@ -208,6 +208,10 @@ div.filelist li {
     margin-right: 1px;
 }
 
+div.filelist li span.fileTabIconContainer {
+    color: orange;
+}
+
 div.filelist li.counterpart {
     margin-right: -3px;
 }
