--- a/modules/native_eZ80/css/dark.css
+++ b/modules/native_eZ80/css/dark.css
@@ -14,24 +14,24 @@
  */
 
 #consoletextarea {
-    background-color: #2B2B2B;
+    background-color: #2B2B2B !important;
 }
 
-#statusbar {
-    background-color: #3b3e40;
+#statusbar_left, #cemu_notice {
+    background-color: #3b3e40 !important;
 }
 
 .CodeMirror {
-    background-color: #D4D4D4;
+    background-color: #D4D4D4 !important;
 }
 
 .CodeMirror-gutters {
-    background-color: #DADADA;
+    background-color: #DADADA !important;
 }
 
 .CodeMirror.cm-s-xq-light {
-    -webkit-filter: invert(1) hue-rotate(180deg);
-    filter: invert(1) hue-rotate(180deg);
+    -webkit-filter: invert(1) hue-rotate(180deg) !important;
+    filter: invert(1) hue-rotate(180deg) !important;
 }
 
 .CodeMirror.cm-s-xq-light .CodeMirror-activeline-background {
