UI improvements ; update libs links

--- a/modules/native_eZ80/css/right_sidebar.css
+++ b/modules/native_eZ80/css/right_sidebar.css
@@ -5,6 +5,10 @@
     margin-right: auto;
 }
 
+#emu_container button {
+    outline: none !important;
+}
+
 #emu_container .emscripten {
     padding-right: 0;
     margin-left: auto;
