--- a/css/main.css
+++ b/css/main.css
@@ -133,3 +133,14 @@ div.wrapper {
     background-color: #DFDFDF;
     box-shadow: -3px 2px 6px 3px #DFDFDF;
 }
+
+/**********************************/
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
