[CSS] Fix editor font, dark theme selection color, and minor things

--- a/modules/native_eZ80/css/dark.css
+++ b/modules/native_eZ80/css/dark.css
@@ -41,3 +41,7 @@
 .CodeMirror.cm-s-xq-light .CodeMirror-matchingbracket {
     background-color: #BBB32E !important;
 }
+
+.CodeMirror.cm-s-xq-light .CodeMirror-selected {
+    background: #9db9b9 !important;
+}
