--- a/css/dark.css
+++ b/css/dark.css
@@ -26,3 +26,7 @@ body {
     background-color: #2E2E2E;
     box-shadow: -3px 2px 6px 3px #2E2E2E;
 }
+
+#leftSidebar, #codeOutline {
+    background-color: #3c3f41;
+}
