--- a/modules/native_eZ80/css/style.css
+++ b/modules/native_eZ80/css/style.css
@@ -238,7 +238,7 @@ div.subfirepad > * {
   font-family: monospace;
   background-color: white;
   white-space: pre-wrap;
-  max-width: 40em;
+  /*max-width: 40em;*/
   position: absolute;
   z-index: 10;
   -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
