--- a/css/dark.css
+++ b/css/dark.css
@@ -27,6 +27,35 @@ body {
     box-shadow: -3px 2px 6px 3px #2E2E2E;
 }
 
-#leftSidebar, #codeOutline {
+#leftSidebar {
     background-color: #3c3f41;
+}
+
+#consoletextarea {
+    background-color: #2B2B2B !important;
+}
+
+.CodeMirror {
+    background-color: #D4D4D4 !important;
+}
+
+.CodeMirror-gutters {
+    background-color: #DADADA !important;
+}
+
+.CodeMirror.cm-s-xq-light {
+    -webkit-filter: invert(1) hue-rotate(180deg) !important;
+    filter: invert(1) hue-rotate(180deg) !important;
+}
+
+.CodeMirror.cm-s-xq-light .CodeMirror-activeline-background {
+    background-color: #BBC8DA !important;
+}
+
+.CodeMirror.cm-s-xq-light .CodeMirror-matchingbracket {
+    background-color: #BBB32E !important;
+}
+
+.CodeMirror.cm-s-xq-light .CodeMirror-selected {
+    background: #9db9b9 !important;
 }
