--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,11 @@ body {
     font-size: 15px;
 }
 
+h2 {
+    margin: 0;
+    padding-bottom: 10px;
+}
+
 #contentcontainer {
     width: 100%;
     height: 100%;
@@ -112,6 +117,60 @@ div.wrapper {
     flex-direction: column;
 }
 
+/*** bottom tools ***/
+
+div.subfirepad {
+    margin-bottom: 10px;
+    height: 30px;
+    min-height: 30px;
+}
+
+#bottomTools {
+    height: 22%;
+    margin-bottom: 6px;
+}
+
+#bottomToolsToggle {
+    width: 40px;
+    height: 10px;
+    background: #555;
+    position: relative;
+    left: 48%;
+    top: -5px;
+    border-radius: 4px;
+    cursor: pointer;
+    z-index: 9;
+    margin-bottom: -10px;
+}
+
+#bottomToolsToggle:before, #bottomToolsToggle:after {
+    color: lightgrey;
+    font-size: 0.7em;
+    position: relative;
+}
+#bottomToolsToggle:before {
+    content: 'V';
+    left: 13px;
+    top: -7px;
+}
+#bottomToolsToggle:after {
+    content: 'Λ';
+    top: -7px;
+    left: 16px;
+}
+
+#consoletextarea {
+    width: 100% !important;
+    height: 100%;
+    font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+    font-size: 9pt;
+    resize: none;
+}
+
+div.subfirepad > * {
+    display: inline-block;
+}
+
 /**********************************/
 
 .sidebarListHeader {
@@ -155,7 +214,28 @@ div.alert[data-notify="container"] {
     animation-duration:.75s !important;
 }
 
+.glyphicon.spinning {
+    animation: spin 1s infinite linear;
+    -webkit-animation: spin2 1s infinite linear;
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg); }
+    to { transform: scale(1) rotate(360deg); }
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+
 /**********************************/
+
+button > span.loadingicon {
+    position: relative;
+    top: 1px;
+    margin-left: 2px;
+}
 
 .unselectable {
     -webkit-touch-callout: none;
@@ -166,11 +246,165 @@ div.alert[data-notify="container"] {
     user-select: none;
 }
 
-/*** override ***/
+/*** bootstrap override ***/
 
 .form-horizontal .checkbox, .form-horizontal .checkbox-inline, .form-horizontal .radio, .form-horizontal .radio-inline {
     padding-top: 5px;
     padding-bottom: 1px;
     margin-top: 0;
     margin-bottom: 0;
+}
+
+ul.dropdown-menu li {
+    cursor: pointer;
+}
+
+/*** CM common stuff ***/
+
+div.CodeMirror {
+    font-size: 13px;
+    border: 1px solid #666;
+    border-radius: 0 0 5px 5px;
+    height: 80%;
+}
+div.CodeMirror div.CodeMirror-lines {
+    line-height: 15px;
+}
+div.CodeMirror.hasOutline {
+    border-bottom-right-radius: 0;
+}
+div.CodeMirror.hasOutline, div.CodeMirror.hasOutline ~ a.powered-by-firepad {
+    margin-right: 200px;
+}
+div.CodeMirror pre {
+    font-family: Menlo,Consolas,'Roboto Mono','Droid Sans Mono','Andale Mono',monospace !important;
+}
+
+.inline-lint-msg {
+    display: inline-block;
+    font-family: monospace !important;
+    font-size: 13px;
+    padding: 0 2px !important;
+}
+
+.inlineTooltip {
+    border: 1px solid silver;
+    border-radius: 3px;
+    color: #444;
+    padding: 0 2px;
+    font-size: 90%;
+    font-family: monospace;
+    background-color: white;
+    white-space: pre-wrap;
+    /*max-width: 40em;*/
+    position: absolute;
+    z-index: 10;
+    -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+    -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+    box-shadow: 2px 3px 5px rgba(0,0,0,.2);
+}
+
+.inlineTooltip > .CodeMirror {
+    border-radius: 0;
+    border: none;
+}
+
+
+/*** multi-user common stuff ***/
+
+#userlist {
+    display: inline-block;
+    vertical-align: top;
+    min-height: 38px;
+}
+
+div.firepad {
+    flex-grow: 1;
+    margin-bottom: 10px;
+    height: initial;
+}
+
+.powered-by-firepad {
+    opacity: .15 !important;
+    transform: scale(.6) !important;
+    right: 0 !important;
+}
+.powered-by-firepad:hover {
+    opacity: .5 !important;
+}
+
+.firepad-userlist {
+    color: #404040;
+}
+
+.firepad-userlist {
+    text-align: left;
+    font-family: 'Helvetica Neue', sans-serif;
+    line-height: normal;
+}
+
+.firepad-userlist-users {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.firepad-userlist-user {
+    padding: 2px;
+    display: inline-block;
+}
+
+.firepad-userlist-color-indicator {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    vertical-align: middle;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 1px 4px;
+}
+
+.firepad-userlist-name {
+    display: inline-block;
+    max-width: 80%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-height: 21px;
+    word-wrap: break-word;
+    word-break: break-all;
+    margin-left: 4px;
+}
+
+#firechat-wrapper {
+    width: 270px;
+    margin: 6px;
+    padding: 8px;
+    position: absolute;
+    bottom: 12px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    text-align: center;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 4px 20px #666;
+    -moz-box-shadow: 0 4px 20px #666;
+    box-shadow: 0 4px 20px #666;
+}
+#firechat-wrapper #firechat #firechat-tabs {
+    height: auto;
+    border-top: 1px solid #CCC;
+}
+#firechat .chat {
+    height: 150px !important;
+}
+#firechat-wrapper #firechat #firechat-header, #firechat-wrapper #firechat #firechat-header, #firechat-wrapper #firechat-tab-list, #firechat-wrapper #firechat .tab-pane-menu {
+    display: none !important;
+}
+
+#multiuser-invite {
+    text-align: center;
 }
