--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,13 @@ h2 {
     padding-bottom: 10px;
 }
 
+#xhrActivityIndicator {
+    bottom: 3px;
+    position: relative;
+    left: 5px;
+    display: none;
+}
+
 #contentcontainer {
     width: 100%;
     height: 100%;
