pointer-events: none; on the editorContainer until ready.
This was already the case when switching files, it's now also that way
at first (page) load.

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,10 @@ h2 {
     height: 100%;
 }
 
+#editorContainer {
+    pointer-events: none; /* will be set to 'auto' once the content etc. is ready */
+}
+
 #statusbar_left {
     border-top: 2px grey solid;
     font-size: .9em;
