--- a/css/dark.css
+++ b/css/dark.css
@@ -59,3 +59,20 @@ body {
 .CodeMirror.cm-s-xq-light .CodeMirror-selected {
     background: #9db9b9 !important;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius:10px;
+    background-color: rgb(15, 15, 15);
+}
+::-webkit-scrollbar-thumb {
+    width: 10px;
+    border-radius:10px;
+    box-shadow: 0 0 0 12px rgb(49, 49, 49) inset;
+}
+::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-thumb:focus {
+    box-shadow: 0 0 0 12px rgb(89, 89, 89) inset;
+}
+::-webkit-scrollbar-thumb:active {
+    box-shadow: 0 0 0 12px rgb(169, 169, 169) inset;
+}
