--- a/modules/native_eZ80/css/dark.css
+++ b/modules/native_eZ80/css/dark.css
@@ -20,3 +20,18 @@
 #codeOutline {
     background-color: #3c3f41;
 }
+
+#emu_keypad_buttons.ti83pce {
+    filter: invert(1) hue-rotate(180deg) brightness(1.4);
+    -webkit-filter: invert(1) hue-rotate(180deg) brightness(1.4);
+}
+
+div.filelist .nav-tabs>li>a, #codeOutlineFilter {
+    border: 1px solid #999;
+    background-color: #2b2b2b;
+}
+
+div.filelist .nav-tabs>li.active.tabover > a {
+    border-bottom: 1px #2b2b2b solid !important;
+    color: #999;
+}
